--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </ul>
         </nav>
 
-        <ul>
+        <ul class="header-adress">
           <li>
             <a href="mailto:info@devstudio.com" class="contact-me"
               >info@devstudio.com</a
@@ -51,7 +51,7 @@
     <main>
       <div class="hero">
         <div class="container">
-          <h1 class="headline">Ефективні рішення <br />для вашого бізнесу</h1>
+          <h1 class="headline">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="service">Замовити послугу</button>
         </div>
       </div>
@@ -59,7 +59,7 @@
       <section class="benefit">
         <div class="container">
           <h2 class="priorities visually-hidden">Пріоритети компанії</h2>
-          <ul>
+          <ul class="priorities">
             <li>
               <h3 class="benefit-item">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="benefit-item-discription">
@@ -94,7 +94,7 @@
       <section class="works">
         <div class="container">
           <h2 class="what-to-do">Чим ми займаємося</h2>
-          <ul>
+          <ul class="what-to-do-list">
             <li>
               <img src="./images/coding.jpg" alt="написання коду" width="370" />
             </li>
@@ -115,7 +115,7 @@
       <section class="team">
         <div class="container">
           <h2 class="our-team">Наша команда</h2>
-          <ul>
+          <ul class="our-team-list">
             <li>
               <img src="./images/ihor.jpg" alt="дизайнер" width="270" />
               <h3 class="team-member">Ігор Дем'яненко</h3>
@@ -147,21 +147,28 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="" lang="en" class="logo-sec">Web<span class="logo-second-part-two">Studio</span></a>
-        
-        <address>
-          <ul>
-            <li><span class="home">м. Київ, пр-т Лесі Українки, 26</span></li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="contact-me-to">info@devstudio.com</a>
+        <a href="" lang="en" class="logo-sec"
+          >Web<span class="logo-second-part-two">Studio</span></a
+        >
+
+        <address class="footer-adress">
+          <ul class="footer-adress-list">
+            <li class="adress-me">
+              <span class="home">м. Київ, пр-т Лесі Українки, 26</span>
             </li>
-            <li>
-              <a href="tel:+380961111111" class="contact-me-to">+38 096 111 11 11</a>
+            <li class="adress-me">
+              <a href="mailto:info@devstudio.com" class="contact-me-to"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="adress-me-tel">
+              <a href="tel:+380961111111" class="contact-me-to"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
         </address>
       </div>
-      
     </footer>
   </body>
 </html>
