--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <nav>
+        <nav class="navigation">
           <a href="" class="logo" lang="en"
             >Web<span class="logo-second-part-one">Studio</span></a
           >
           <ul class="main-nav">
-            <li>
+            <li class="head-item">
               <a href="./index.html" class="main-nav-item current">Студія</a>
             </li>
-            <li>
+            <li class="head-item">
               <a href="./portfolio.html" class="main-nav-item">Портфоліо</a>
             </li>
-            <li><a href="" class="main-nav-item">Контакти</a></li>
+            <li class="head-item"><a href="" class="main-nav-item">Контакти</a></li>
           </ul>
         </nav>
 
         <ul class="header-adress">
-          <li>
+          <li class="ha-adress">
             <a href="mailto:info@devstudio.com" class="contact-me"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="ha-adress">
             <a href="tel:+380961111111" class="contact-me">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -91,48 +91,75 @@
         </div>
       </section>
 
-      <section class="works">
+      <section class="works section">
         <div class="container">
           <h2 class="what-to-do">Чим ми займаємося</h2>
           <ul class="what-to-do-list">
             <li>
-              <img src="./images/coding.jpg" alt="написання коду" width="370" />
+              <img
+                class="img-display"
+                src="./images/coding.jpg"
+                alt="написання коду"
+                width="370"
+              />
             </li>
             <li>
               <img
+                class="img-display"
                 src="./images/modificating-desktop.jpg"
                 alt="модифікація рабочого столу"
                 width="370"
               />
             </li>
             <li>
-              <img src="./images/designing.jpg" alt="дизайн" width="370" />
+              <img
+                class="img-display"
+                src="./images/designing.jpg"
+                alt="дизайн"
+                width="370"
+              />
             </li>
           </ul>
         </div>
       </section>
 
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="our-team">Наша команда</h2>
           <ul class="our-team-list">
             <li>
-              <img src="./images/ihor.jpg" alt="дизайнер" width="270" />
+              <img
+                class="img-display"
+                src="./images/ihor.jpg"
+                alt="дизайнер"
+                width="270"
+              />
               <h3 class="team-member">Ігор Дем'яненко</h3>
               <p lang="en" class="work-member">Product Designer</p>
             </li>
             <li>
-              <img src="./images/olga.jpg" alt="розробник" width="270" />
+              <img
+                class="img-display"
+                src="./images/olga.jpg"
+                alt="розробник"
+                width="270"
+              />
               <h3 class="team-member">Ольга Рєпіна</h3>
               <p lang="en" class="work-member">Frontend Developer</p>
             </li>
             <li>
-              <img src="./images/nick.jpg" alt="маркетолог" width="270" />
+              <img
+                class="img-display"
+                src="./images/nick.jpg"
+                alt="маркетолог"
+                width="270"
+              />
               <h3 class="team-member">Микола Тарасов</h3>
               <p lang="en" class="work-member">Marketing</p>
             </li>
             <li>
               <img
+                class="img-display"
                 src="./images/misha.jpg"
                 alt="дизайнер интерфейса"
                 width="270"
