--- a/portfolio.html
+++ b/portfolio.html
@@ -20,49 +20,59 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <nav>
+        <nav class="navigation">
           <a href="" class="logo" lang="en"
             >Web<span class="logo-second-part-one">Studio</span></a
           >
           <ul class="main-nav">
-            <li><a href="./index.html" class="main-nav-item">Студія</a></li>
-            <li>
+            <li class="head-item">
+              <a href="./index.html" class="main-nav-item">Студія</a>
+            </li>
+            <li class="head-item">
               <a href="./portfolio.html" class="main-nav-item current"
                 >Портфоліо</a
               >
             </li>
-            <li><a href="" class="main-nav-item">Контакти</a></li>
+            <li class="head-item">
+              <a href="" class="main-nav-item">Контакти</a>
+            </li>
           </ul>
         </nav>
 
-        <ul>
-          <li>
+        <ul class="header-adress">
+          <li class="ha-adress">
             <a href="mailto:info@devstudio.com" class="contact-me"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="ha-adress">
             <a href="tel:+380961111111" class="contact-me">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
     </header>
     <main>
-      <section>
+      <section class="main-section section">
         <div class="container">
           <h1 class="our-works visually-hidden">Наші роботи</h1>
-          <ul>
-            <li><button type="button" class="port-button">Усі</button></li>
-            <li>
+          <ul class="filter">
+            <li class="btn">
+              <button type="button" class="port-button">Усі</button>
+            </li>
+            <li class="btn">
               <button type="button" class="port-button">Веб-сайти</button>
             </li>
-            <li><button type="button" class="port-button">Додатки</button></li>
-            <li><button type="button" class="port-button">Дизайн</button></li>
-            <li>
+            <li class="btn">
+              <button type="button" class="port-button">Додатки</button>
+            </li>
+            <li class="btn">
+              <button type="button" class="port-button">Дизайн</button>
+            </li>
+            <li class="btn">
               <button type="button" class="port-button">Маркетинг</button>
             </li>
           </ul>
-          <ul>
+          <ul class="filter-works">
             <li>
               <img
                 src="./images/technocrack.jpg"
