--- a/portfolio.html
+++ b/portfolio.html
@@ -73,86 +73,104 @@
             </li>
           </ul>
           <ul class="filter-works">
-            <li>
-              <img
+            <li class="f-w-item">
+              <img class="example-img img-display" 
                 src="./images/technocrack.jpg"
                 alt="оформлення вебсайту"
                 width="370"
               />
-              <h2 class="example">Технокряк</h2>
-              <p class="example-name">Веб-сайт</p>
+              <div class="border-discription">
+                <h2 class="example">Технокряк</h2>
+                <p class="example-name">Веб-сайт</p>
+              </div>
             </li>
-            <li>
-              <img
+            <li class="f-w-item">
+              <img class="example-img img-display"
                 src="./images/poster.jpg"
                 alt="оформлення постерів"
                 width="370"
               />
-              <h2 class="example">
-                Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h2>
-              <p class="example-name">Дизайн</p>
+              <div class="border-discription">
+                <h2 class="example">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h2>
+                <p class="example-name">Дизайн</p>
+              </div>
             </li>
-            <li>
-              <img
+            <li class="f-w-item">
+              <img class="example-img img-display"
                 src="./images/restaurant.jpg"
                 alt="оформлення сайту ресторану"
                 width="370"
               />
-              <h2 class="example">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="example-name">Додаток</p>
+              <div class="border-discription">
+                <h2 class="example">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="example-name">Додаток</p>
+              </div>
             </li>
-            <li>
-              <img
+            <li class="f-w-item">
+              <img class="example-img img-display"
                 src="./images/project-prime.jpg"
                 alt="маркетинг роектів"
                 width="370"
               />
-              <h2 class="example">Проєкт <span lang="en">Prime</span></h2>
-              <p class="example-name">Маркетинг</p>
+              <div class="border-discription">
+                <h2 class="example">Проєкт <span lang="en">Prime</span></h2>
+                <p class="example-name">Маркетинг</p>
+              </div>
             </li>
-            <li>
-              <img
+            <li class="f-w-item">
+              <img class="example-img img-display"
                 src="./images/project-boxes.jpg"
                 alt="створення додатків"
                 width="370"
               />
-              <h2 class="example">Проєкт <span lang="en">Boxes</span></h2>
-              <p class="example-name">Додаток</p>
+              <div class="border-discription">
+                <h2 class="example">Проєкт <span lang="en">Boxes</span></h2>
+                <p class="example-name">Додаток</p>
+              </div>
             </li>
-            <li>
-              <img
+            <li class="f-w-item">
+              <img class="example-img img-display"
                 src="./images/inspiration.jpg"
                 alt="оформлення вебсайтів"
                 width="370"
               />
-              <h2 class="example">Inspiration has no Borders</h2>
-              <p class="example-name">Веб-сайт</p>
+              <div class="border-discription">
+                <h2 class="example">Inspiration has no Borders</h2>
+                <p class="example-name">Веб-сайт</p>
+              </div>
             </li>
-            <li>
-              <img
+            <li class="f-w-item">
+              <img class="example-img img-display"
                 src="./images/vydannya.jpg"
                 alt="дизайн видань"
                 width="370"
               />
-              <h2 class="example">
-                Видання <span lang="en">Limited Edition</span>
-              </h2>
-              <p class="example-name">Дизайн</p>
+              <div class="border-discription">
+                <h2 class="example">
+                  Видання <span lang="en">Limited Edition</span>
+                </h2>
+                <p class="example-name">Дизайн</p>
+              </div>
             </li>
-            <li>
-              <img src="./images/project-lab.jpg" alt="макетинг" width="370" />
-              <h2 class="example">Проєкт <span lang="en">LAB</span></h2>
-              <p class="example-name">Маркетинг</p>
+            <li class="f-w-item">
+              <img class="example-img img-display" src="./images/project-lab.jpg" alt="макетинг" width="370" />
+              <div class="border-discription">
+                <h2 class="example">Проєкт <span lang="en">LAB</span></h2>
+                <p class="example-name">Маркетинг</p>
+              </div>
             </li>
-            <li>
-              <img
+            <li class="f-w-item">
+              <img class="example-img img-display"
                 src="./images/growing-business.jpg"
                 alt="дизайн додатку"
                 width="370"
               />
-              <h2 class="example">Growing Business</h2>
-              <p class="example-name">Додаток</p>
+              <div class="border-discription">
+                <h2 class="example">Growing Business</h2>
+                <p class="example-name">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -160,22 +178,18 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="" lang="en" class="logo-sec"
-          >Web<span class="logo-second-part-two">Studio</span></a
-        >
-
-        <address>
-          <ul>
-            <li><span class="home">м. Київ, пр-т Лесі Українки, 26</span></li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="contact-me-to"
-                >info@devstudio.com</a
-              >
+        <a href="" lang="en" class="logo-sec">Web<span class="logo-second-part-two">Studio</span></a>
+    
+        <address class="footer-adress">
+          <ul class="footer-adress-list">
+            <li class="adress-me">
+              <span class="home">м. Київ, пр-т Лесі Українки, 26</span>
             </li>
-            <li>
-              <a href="tel:+380961111111" class="contact-me-to"
-                >+38 096 111 11 11</a
-              >
+            <li class="adress-me">
+              <a href="mailto:info@devstudio.com" class="contact-me-to">info@devstudio.com</a>
+            </li>
+            <li class="adress-me-tel">
+              <a href="tel:+380961111111" class="contact-me-to">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
