--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             <li class="head-item">
               <a href="./portfolio.html" class="main-nav-item">Портфоліо</a>
             </li>
-            <li class="head-item"><a href="" class="main-nav-item">Контакти</a></li>
+            <li class="head-item">
+              <a href="" class="main-nav-item">Контакти</a>
+            </li>
           </ul>
         </nav>
 
